Delete resource api
