# openapi.yaml
@@ -351,6 +351,42 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/ApiResponseOutput'
+  /admin/resource/delete/resource/{resourceId}:
+    delete:
+      tags:
+      - resource-admin-controller
+      operationId: deleteResource
+      parameters:
+      - name: resourceId
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ApiResponseOutput'
+  /admin/resource/delete/material/{materialId}:
+    delete:
+      tags:
+      - resource-admin-controller
+      operationId: deleteMaterial
+      parameters:
+      - name: materialId
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ApiResponseOutput'
   /admin/label/unlinkChildren/{parentLabelId}/{childLabelId}:
     delete:
       tags:
